[workspace]
members = [
    "examples/rp2040",
    "macros",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MPL-2.0"

[package]
name = "emc230x"
description = "An async driver for the EMC230x family of fan controllers"
repository = "https://github.com/retroctrl/emc230x/"
keywords = ["embedded", "fan", "emc230x"]
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
std = []
alloc = []

[dependencies]
bitfield = "0.17.0"
defmt = "0.3.8"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
fans = "0.3"
num_enum = { version = "0.7.3", default-features = false }
emc230x-macros = { path = "./macros", version = "0.5" }
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["embedded-hal-async"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
